@@ -26,7 +26,6 @@
 extern "C" {
 #endif	
 
-#include "backend/mgr.hh"
 #include "backend/config.hh"
 		
 void backend_init(void);
